--- a/projects/index.html
+++ b/projects/index.html
@@ -301,7 +301,7 @@
 
   
     <div class="card-thumbnail ">
-      <a href="/projects/BlueTN%20App/"><img alt="BlueTN App" src="/assets/images/gen/projects/BLUETN-P-1-thumb.png"/></a>
+      <a href="/projects/BlueTN%20App/"><img alt="BlueTN App" src="/assets/images/gen/projects/BLUETN-P-1-thumb.jpg"/></a>
     </div>
   
 
