--- a/projects/Health Equity/index.html
+++ b/projects/Health Equity/index.html
@@ -220,7 +220,7 @@
       </div>
 
       <div class="col-12 col-md-6 mb-4">
-        <div class="content"><p>Around the start of the year I was brought in to help the BlueCross adapt to meet the challenge of organizing an extensive amount of data and research diving in the complexities of health disparities in Tennessee by racial and socioeconomic factors. The result is a valiant effort from the organization to take steps in adopting more transparent and open communication with the community. The insights provided by the amazing work of these internal teams will certainly help add to the conversation of building awareness for a more sustainable and equitable society.</p>
+        <div class="content"><p>Around the start of the year I was brought in to help BlueCross adapt to meet the challenge of organizing an extensive amount of data and research diving in the complexities of health disparities in Tennessee by racial and socioeconomic factors. The result is a valiant effort from the organization to take steps in adopting more transparent and open communication with the community. The insights provided by the amazing work of these internal teams will certainly help add to the conversation of building awareness for a more sustainable and equitable society.</p>
 </div>
       </div>
 
