--- a/WORKING/Wellness/index.html
+++ b/WORKING/Wellness/index.html
@@ -203,11 +203,7 @@
           </div>
         
 
-        <div class="content"><p>Incipsapitati con premporit aut omnimil iliquuntiis etur, sandam, ommo veles dolorer eptibus apictiore, officitati autatque ario bla sed que natisqui volupta temquam aut quiande cuscit optur? Libus, comnimi, omnis con nobis doluptum am quia non comnis vid mos et illam reped quaescius doluptatas alit, quo eosto qui dolorepudae volupid ut asin eat ist, consendi omnia distota eaqui untemol enditati quis nem fugia quaepudi debisqu untustis nonsecta aut aut debitatiatem ipsaept inciendani ut erferib eratiam inihicias ea aruptae stiundi comnis et hil inimodi cor maximpo remporio.</p>
-
-<p>Et minulparia pratissi omnihilignis ute id et untia con eatiure pernam as re eliquo mo iunt ducilibus dolles elentur ad quaerum ipienis eiumquis quiaepu daerumqui accae dipsus, et omnimenecte erum solorum earchillaut quassitatias ulluptaqui to voles as idust ommolup tasperro torum quature con etusto odit eiciatu sdandio.</p>
-
-<p>Harunt verum ratem asped quiatec aborionsedis molenectur sent aut fugiatur, sint essi con consedi consequis abo. Mincto ditia nimin conecep eritatis qui cuptibus eaquatibus, omnis estore illesti ipsam sentemquam quam et quas et.</p>
+        <div class="content"><p>My first task as a Designer coming from the Production team was to breath some new life into the Wellness product which utilized an outdated brand style which no longer fit the products value proposition.</p>
 </div>
 
         
