--- a/contact/success.html
+++ b/contact/success.html
@@ -164,6 +164,7 @@
   </div>
 </div>
 
+
 <div id="wrapper" class="wrapper">     
   <div class="section">
   <div class="container">
@@ -179,19 +180,21 @@
 
 
 
+
 <div class="heading">
   
-  
+
   
   <div class="heading-heading">
     <h1>Success</h1>
   </div>
   
-  
+
   
 
   
 </div>
+
       </div>
     </div>
   </div>
@@ -281,15 +284,19 @@
         
       </div>
       
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB5JRHR9GW"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XB5JRHR9GW', { 'anonymize_ip': true }); </script>
+
     </div>
   </div>
 </div>
+
 
 
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
 
 <script type="text/javascript" src="/assets/js/hamburger.js"></script>
 <script type="text/javascript" src="/assets/js/darkModeSwitch.js"></script>
+
 
 
 
