--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
   </div>
 </div>
 
+
 <div id="wrapper" class="wrapper">     
   <div class="section">
   <div class="container">
@@ -181,15 +182,16 @@
 
 
 
+
 <div class="heading">
   
-  
+
   
   <div class="heading-heading">
     <h1>Data driven, systems thinking.</h1>
   </div>
   
-  
+
   
     <div class="heading-description">
       <p>I have nearly 10 years in-house experience working with all layers of the multimedia production cycle from postcards to mobile apps, and I like to run  around in the sticks of Georgia. Chad is open and currently looking for new opportunities.</p>
@@ -198,6 +200,7 @@
 
   
 </div>
+
       </div>
     </div>
   </div>
@@ -604,15 +607,19 @@
         
       </div>
       
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB5JRHR9GW"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XB5JRHR9GW', { 'anonymize_ip': true }); </script>
+
     </div>
   </div>
 </div>
+
 
 
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
 
 <script type="text/javascript" src="/assets/js/hamburger.js"></script>
 <script type="text/javascript" src="/assets/js/darkModeSwitch.js"></script>
+
 
 
 
