--- a/projects/BlueTN App/index.html
+++ b/projects/BlueTN App/index.html
@@ -189,6 +189,11 @@
             </div>
           
             <div class="gallery-item">
+              <div class="gallery-image"><img src="/assets/images/gen/projects/BLUETN-P-13.png"/></div>
+              <div class="gallery-caption"></div>
+            </div>
+          
+            <div class="gallery-item">
               <div class="gallery-image"><img src="/assets/images/gen/projects/BLUETN-P-12.png"/></div>
               <div class="gallery-caption"></div>
             </div>
